# chat_app

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: adapters.rs  app.rs  error.rs  main.rs  old_app.rs  ports.rs
src/adapters/: transport.rs
src/adapters/transport/: memory.rs
src/adapters/transport/memory/: addr.rs  channel.rs  envelope.rs  factory.rs  id.rs  registry.rs  sender_dispenser.rs  singleton.rs  static_store.rs  tx_dispenser.rs  tx_sharer.rs  unit_tests.rs
src/adapters/transport/memory/static_store/: unique_addr.rs
src/adapters/transport/memory/static_store/unique_addr/: unit_tests.rs
src/adapters/transport/memory/tx_sharer/: unit_tests.rs
src/adapters/transports/: memory_transport.rs
src/app/: chat_message.rs  chat_window.rs  msg.rs  unit_tests.rs
src/app/unit_tests/: fake_transport.rs  hello.rs  ping.rs  start.rs
src/error/: app.rs  transport.rs
src/error/transport/: memory.rs
src/error/transport/memory/: channel.rs  factory.rs  try_lock_error.rs
src/ports/: msg.rs  msg_transporter.rs  node_id.rs  target.rs  transport.rs  transporter.rs
src/ports/transport/: channel.rs  envelope.rs  id.rs
