[package]
name = "chat_app"
version = "0.1.0"
authors = ["marianne.goldin <marianne@transparentinc.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
get_if_addrs = "0.5"
serde = { version = "1", features = ["derive"] }
ws = "0.9"
bincode = "1"
thiserror = "1"
net2 = "0.2"
url = "2"
async-trait = "0.1"
futures = "0.3"
bool_ext = "0.3"
assert2 = "0.2"

[dev-dependencies]
lazy_static = "1"
dashmap = "3"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
